# casmi

./: .cirrus.yml  .clang-format  .config.mk  .gitattributes  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Cargo.toml  LICENSE.txt  Makefile  README.org
.ci/: build-upstream.yml  build.yml  test.yml
.cmake/: LibPackage.cmake  config.mk
.github/workflows/: build.yml  nightly.yml
etc/: CMakeLists.txt
etc/benchmark/: CMakeLists.txt  main.cpp
etc/test/: CMakeLists.txt  main.cpp  main.h
etc/test/subject/: example.cpp
src/: CMakeLists.txt  License.h  PassManager.cpp  PassManager.h  Version.in  Version.in.h  casmi.cpp  lib.rs
uts/: example.cpp
uts/subject/: example.cpp
